--- a/grin-py/webui-js/src/custom/custom.scss
+++ b/grin-py/webui-js/src/custom/custom.scss
@@ -8,10 +8,10 @@
   }
  
   .recharts-tooltip-wrapper p {
-    color: #212529;
+    color: #FFFFFF;
   }
   .recharts-tooltip-wrapper span {
-    color: #212529;
+color: #212529;
   }  
 }
 
@@ -79,7 +79,7 @@
 
 .custom-network-data-tooltip {
   padding: 10px;
-  background-color: #cccccc;
+  background-color: #2E2D2D;
 }
 
 .instructions {
