--- a/grin-py/webui-js/src/scss/settings/variable.scss
+++ b/grin-py/webui-js/src/scss/settings/variable.scss
@@ -1,6 +1,6 @@
 $themes: (
   light: (
-    colorBackground: white,
+    colorBackground: #FFFFFF,
     colorBackgroundBody: #f2f4f7,
     colorText: #555555,
     colorTextAdditional: #555555,
